# RarLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: RarLibConfig.cmake.in
include/RarLib/: OS.hpp  Rar.hpp  Unrar.hpp  Wrapper.hpp
src/RarLib/: Rar.cpp  Unrar.cpp  Wrapper.cpp
